# Objektinis_programavimas_pratybos

./: CMakeLists.txt  README.md  balu_vardu_meniu_ivestys.cpp  bandymas  generavimas.h  ivestys.cpp  ivestys.h  kursiokai.txt  main  main.cpp  papildomos_funkcijos.cpp  papildomos_funkcijos.h  pirma_ud  spausdinimas.cpp  spausdinimas.h  studentai.h  v0.1.  v0.2
list_versija/: balu_vardu_meniu_ivestys.cpp  galutinis_balas.cpp  galutinis_balas.h  generavimas.cpp  ivestys.cpp  ivestys.h  main.cpp  papildomos_funkcijos.cpp  papildomos_funkcijos.h  spausdinimas.cpp  spausdinimas.h  studentai.h
vector_versija/: balu_vardu_meniu_ivestys.h  galutinis_balas.cpp  galutinis_balas.h  generavimas.cpp  generavimas.h  ivestys.cpp  ivestys.h  main.cpp  papildomos_funkcijos.cpp  papildomos_funkcijos.h  spausdinimas.cpp  spausdinimas.h
